--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jasmine-node": "1.14.2"
   },
   "dependencies": {
+    "cyclon.p2p-common": "0.0.1",
     "bluebird": "2.1.x",
     "gauss": "0.2.12"
   }
