--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "make test",
-    "clean": "make clean",
-    "prepare": "npm run build"
+    "test": "tsc && nyc jasmine",
+    "clean": "rm -rf node_modules && rm -rf lib",
+    "prepare": "tsc"
   },
   "devDependencies": {
-    "istanbul": "0.3.x",
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "jasmine": "^2.99.0",
+    "nyc": "^14.1.1",
+    "source-map-support": "^0.5.13",
+    "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
   },
   "dependencies": {
